# maverick

./: pyproject.toml
src/maverick/: __init__.py  agent.py
src/maverick/backend/: __init__.py  parse_documentation.py
